# faststr

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
benches/: faststr.rs
src/: bytes_ref.rs  inline_size.rs  lib.rs  redis.rs  rkyv.rs  sea_orm.rs  serde.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs  ts_rs.rs
utils/: Cargo.toml  README.md  faststr_gdb.py  faststr_lldb.py
utils/src/: main.rs
