[package]
name = "faststr"
version = "0.2.24"
authors = ["Volo Team <volo@cloudwego.io>"]
edition = "2021"
description = "Faststr is a string library that reduces the cost of clone."
repository = "https://github.com/volo-rs/faststr"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["string", "str", "volo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false }
simdutf8 = { version = "0.1", default-features = false, features = [
    "aarch64_neon",
] }
redis = { version = "0.27", optional = true, default-features = false }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }
rkyv = { version = "0.8", optional = true, default-features = false }

[features]
default = ["std"]
std = ["bytes/std", "simdutf8/std", "serde?/std", "rkyv?/std"]
serde = ["serde/alloc"]
serde-unsafe = ["serde"]
redis = ["std", "dep:redis", "itoa", "ryu"]
redis-unsafe = ["redis"]
rkyv = ["rkyv/alloc"]


[dev-dependencies]
static_assertions = { version = "1" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "faststr"
harness = false

[profile.bench]
debug = true
lto = true
opt-level = 3
