[package]
authors = ["Volo Team <volo@cloudwego.io>"]
description = "Faststr is a string library that reduces the cost of clone."
edition = "2021"
keywords = ["string", "str", "volo"]
license = "MIT OR Apache-2.0"
name = "faststr"
readme = "README.md"
repository = "https://github.com/volo-rs/faststr"
version = "0.2.33"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1", default-features = false}
itoa = {version = "1", optional = true}
redis = {version = "1.0", optional = true, default-features = false, features = [
  "num-bigint",
]}
rkyv = {version = "0.8", optional = true, default-features = false}
ryu = {version = "1", optional = true}
sea-orm = {version = "1.1", optional = true, default-features = false}
serde = {version = "1", optional = true, default-features = false}
simdutf8 = {version = "0.1", default-features = false, features = [
  "aarch64_neon",
]}
sqlx = {version = "0.8", optional = true, default-features = false}
sqlx-mysql = {version = "0.8", optional = true, default-features = false}
sqlx-postgres = {version = "0.8.6", optional = true, default-features = false}
ts-rs = {version = "11", optional = true, default-features = false}

[features]
default = ["std"]
redis = ["std", "dep:redis", "itoa", "ryu"]
redis-unsafe = ["redis"]
rkyv = ["rkyv/alloc"]
sea-orm = ["std", "dep:sea-orm", "itoa"]
serde = ["serde/alloc"]
serde-unsafe = ["serde"]
sqlx-mysql = ["std", "dep:sqlx", "dep:sqlx-mysql"]
sqlx-mysql-unsafe = ["sqlx-mysql"]
sqlx-postgres = ["std", "dep:sqlx", "dep:sqlx-postgres"]
sqlx-postgres-unsafe = ["sqlx-postgres"]
std = ["bytes/std", "simdutf8/std", "serde?/std", "rkyv?/std"]
ts-rs = ["std", "dep:ts-rs"]

[dev-dependencies]
criterion = {version = "0.7", features = ["html_reports"]}
static_assertions = {version = "1"}

# For sea-orm integration tests
sea-orm = {version = "1.1", features = ["macros", "mock"]}
tokio = {version = "1", features = ["rt", "macros"]}

[workspace]
members = [".", "utils"]

[[bench]]
harness = false
name = "faststr"

[profile.bench]
debug = true
lto = true
opt-level = 3
